<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:layout_marginVertical="@dimen/space_small"
            android:text="@string/_default"
            app:icon="@drawable/ic_baseline_brightness_1_24"
            style="@style/AppTheme.Button" />

        <Button
            android:id="@+id/btn_tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:layout_marginVertical="@dimen/space_small"
            android:text="@string/tonal"
            app:icon="@drawable/ic_baseline_brightness_1_24"
            style="@style/AppTheme.Button.Tonal" />

        <Button
            android:id="@+id/btn_accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:layout_marginVertical="@dimen/space_small"
            android:text="@string/accent"
            app:icon="@drawable/ic_baseline_brightness_1_24"
            style="@style/AppTheme.Button.Accent" />

        <Button
            android:id="@+id/btn_outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:layout_marginVertical="@dimen/space_small"
            android:text="@string/outlined"
            app:icon="@drawable/ic_baseline_brightness_1_24"
            style="@style/AppTheme.Button.Outlined" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_secondary">
            <Button
                android:id="@+id/btn_outlined_mono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_medium"
                android:layout_marginVertical="@dimen/space_small"
                android:text="@string/outlined_mono"
                app:icon="@drawable/ic_baseline_brightness_1_24"
                style="@style/AppTheme.Button.Outlined.Mono" />
        </FrameLayout>
    </LinearLayout>
</layout>
