<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_medium"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_primary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/primary"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onPrimary" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_primaryContainer">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/primary_container"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onPrimaryContainer" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_secondary"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/secondary"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onSecondary" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_secondaryContainer"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/secondary_container"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onSecondaryContainer" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_tertiary"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/tertiary"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onTertiary" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_tertiaryContainer"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/tertiary_container"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onTertiaryContainer" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_error"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/error"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onError" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_errorContainer"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/error_container"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onErrorContainer" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_background"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/background"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onBackground" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_surface"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/surface"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onSurface" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_theme_surfaceVariant"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_medium"
                    android:text="@string/surface_variant"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_theme_onSurfaceVariant" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>
</layout>
